@@ -212,6 +212,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\src\body\CIrrBPConvexHullBody.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\src\body\CIrrBPCylinderBody.cpp"
 					>
 				</File>
@@ -319,6 +323,10 @@
 				</File>
 				<File
 					RelativePath="..\include\body\CIrrBPConeBody.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\body\CIrrBPConvexHullBody.h"
 					>
 				</File>
 				<File
